--- a/templates/restaurant/details.html.twig
+++ b/templates/restaurant/details.html.twig
@@ -8,8 +8,7 @@
         <div class="bg-white overflow-hidden shadow-xl sm:rounded-lg">
             <div class="relative">
                 <img class="w-full h-64 object-cover" src="https://via.placeholder.com/1200x400" alt="{{ restaurant.name }}">
-                <div class="absolute inset-0 bg-black opacity-50"></div>
-                <div class="absolute inset-0 flex items-center justify-center">
+                <div class="absolute inset-0 bg-black opacity-50"></div><div class="absolute inset-0 flex items-center justify-center">
                     <h1 class="text-4xl font-bold text-white">{{ restaurant.name }}</h1>
                 </div>
             </div>
@@ -60,7 +59,7 @@
                         Voir les menus
                     </a>
                     {% if is_granted('ROLE_USER') %}
-                        <a href="{{ path('app_reservation_new', {'id': restaurant.id}) }}" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 w-full sm:w-auto text-center">
+                        <a href="{{ path('app_reservation_plans', {'id': restaurant.id}) }}" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110 w-full sm:w-auto text-center">
                             Réserver une table
                         </a>
                     {% else %}
