--- a/templates/restaurant/list.html.twig
+++ b/templates/restaurant/list.html.twig
@@ -13,13 +13,7 @@
                     <div class="bg-white rounded-xl shadow-md overflow-hidden transition duration-300 ease-in-out transform hover:scale-105 hover:shadow-lg">
                         <div class="relative h-48">
                             <img src="https://via.placeholder.com/400x200" alt="{{ restaurant.name }}" class="w-full h-full object-cover lazy" data-src="https://via.placeholder.com/400x200">
-                            <div class="absolute top-0 right-0 bg-white text-primary px-3 py-1 m-2 rounded-full text-sm font-semibold shadow">
-                                {% if restaurant.isActive %}
-                                    <span class="text-green-500">Ouvert</span>
-                                {% else %}
-                                    <span class="text-red-500">Fermé</span>
-                                {% endif %}
-                            </div>
+                            
                         </div>
                         <div class="p-6">
                             <h3 class="text-xl font-bold text-gray-900 mb-2">{{ restaurant.name }}</h3>
@@ -31,13 +25,7 @@
                                 </svg>
                                 <span class="truncate">{{ restaurant.address }}</span>
                             </div>
-                            <div class="flex justify-between items-center">
-                                <div class="flex items-center">
-                                    <svg class="w-4 h-4 text-yellow-400 mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path>
-                                    </svg>
-                                    <span class="text-gray-700 font-semibold">4.5</span>
-                                </div>
+                            <div class="flex justify-end items-center">
                                 <a href="{{ path('restaurant_details', {'id': restaurant.id}) }}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                     Voir détails
                                 </a>
