--- a/templates/error/already_logged_in.html.twig
+++ b/templates/error/already_logged_in.html.twig
@@ -55,7 +55,7 @@
                         Retour à l'accueil
                     </a>
                     {% if is_granted('ROLE_ADMIN') %}
-                        <a href="{{ path('app_admin_dashboard') }}" class="w-full flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Tableau de bord</a>
+                        <a href="{{ path('admin_dashboard') }}" class="w-full flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Tableau de bord</a>
                     {% elseif is_granted('ROLE_OWNER') %}
                         <a href="{{ path('app_owner_dashboard') }}" class="w-full flex justify-center py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">Tableau de bord</a>
                     {% elseif is_granted('ROLE_USER') %}
