--- a/templates/parts/header.html.twig
+++ b/templates/parts/header.html.twig
@@ -21,7 +21,7 @@
                             <a href="{{ path('app_user_profile') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Profile</a>
                             
                             {% if is_granted('ROLE_ADMIN') %}
-                                <a href="{{ path('app_admin_dashboard') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Tableau de bord</a>
+                                <a href="{{ path('admin_dashboard') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Tableau de bord</a>
                             {% elseif is_granted('ROLE_OWNER') %}
                                 <a href="{{ path('app_owner_dashboard') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Tableau de bord</a>
                                 <a href="{{ path('app_owner_restaurant_index') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mes restaurants</a>
